Amélioration ClusteringDivisifRange + intégration du fold dans équilibrage inter-cluster